fix spacing from tailwind (#162)
* fix spacing from tailwind

* fix alignment

--- a/src/components/NewHomePage/VerticalsSection/VerticalsSection.css
+++ b/src/components/NewHomePage/VerticalsSection/VerticalsSection.css
@@ -1,4 +1,4 @@
-h2, h3, a, p {
+.verticals-section h2, .verticals-section h3, .verticals-section a {
   margin: 0px;
   padding: 0px;
 }
